--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Um simples Micro-SaaS (Micro Software as a Service) para encurtar URL",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
